# MinimalVertexCover

./: CMakeLists.txt  README.md  output.txt
MinimalVertexCover.dSYM/Contents/: Info.plist
inputs/: frb30-13-1.txt  frb30-13-2.txt  frb30-13-3.txt  frb30-13-4.txt  frb30-13-5.txt  frb59-26-1.txt  frb59-26-2.txt  frb59-26-3.txt  frb59-26-4.txt  frb59-26-5.txt  mesta-czsk.txt  test.txt
src/: Graph.h  Individual.h  Population.h  main.cpp
